--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,11 +31,16 @@ body {
 }
 
 header {
+  display: flex;
+  justify-content: flex-end;
+  align-content: center;
   background-color: var(--destaque);
   color: var(--texto);
   padding: 10px;
-  display: flex;
-  justify-content: flex-end;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  
 }
 
 nav#menu ul {
